--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.5.1",
+    "parseurl": "^1.3.3",
     "popper.js": "^1.14.7"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.26.14",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.1.0",
     "gulp-sass": "^4.0.2"
