--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.14",
+    "browser-sync": "^2.27.9",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
-    "gulp-sass": "^4.1.0"
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.32.12"
   }
 }
